skeleton loading added

--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -513,75 +513,100 @@
         <h5>Error while getting all the datas.</h5>
       </div>
 
-      <main1 ng-show="isloading">
-        <ul class="o-vertical-spacing o-vertical-spacing--l">
-          <li class="blog-post o-media">
-            <div class="o-media__figure">
-              <span class="skeleton-box" style="width:100px;height:80px;"></span>
-            </div>
-            <div class="o-media__body">
-              <div class="o-vertical-spacing">
-                <h3 class="blog-post__headline">
-                  <span class="skeleton-box" style="width:55%;"></span>
-                </h3>
-                <p>
-                  <span class="skeleton-box" style="width:80%;"></span>
-                  <span class="skeleton-box" style="width:90%;"></span>
-                  <span class="skeleton-box" style="width:83%;"></span>
-                  <span class="skeleton-box" style="width:80%;"></span>
-                </p>
-                <div class="blog-post__meta">
-                  <span class="skeleton-box" style="width:70px;"></span>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="blog-post o-media">
-            <div class="o-media__figure">
-              <span class="skeleton-box" style="width:100px;height:80px;"></span>
-            </div>
-            <div class="o-media__body">
-              <div class="o-vertical-spacing">
-                <h3 class="blog-post__headline">
-                  <span class="skeleton-box" style="width:55%;"></span>
-                </h3>
-                <p>
-                  <span class="skeleton-box" style="width:80%;"></span>
-                  <span class="skeleton-box" style="width:90%;"></span>
-                  <span class="skeleton-box" style="width:83%;"></span>
-                  <span class="skeleton-box" style="width:80%;"></span>
-                </p>
-                <div class="blog-post__meta">
-                  <span class="skeleton-box" style="width:70px;"></span>
-                </div>
-              </div>
-            </div>
-          </li>
-          <li class="blog-post o-media">
-            <div class="o-media__figure">
-              <span class="skeleton-box" style="width:100px;height:80px;"></span>
-            </div>
-            <div class="o-media__body">
-              <div class="o-vertical-spacing">
-                <h3 class="blog-post__headline">
-                  <span class="skeleton-box" style="width:55%;"></span>
-                </h3>
-                <p>
-                  <span class="skeleton-box" style="width:80%;"></span>
-                  <span class="skeleton-box" style="width:90%;"></span>
-                  <span class="skeleton-box" style="width:83%;"></span>
-                  <span class="skeleton-box" style="width:80%;"></span>
-                </p>
-                <div class="blog-post__meta">
-                  <span class="skeleton-box" style="width:70px;"></span>
-                </div>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </main1>
 
-      <ul ng-repeat="singlePost in allPosts | orderBy: ['-postedTime', 'id']">
+
+    <main ng-show="isloading">
+      <ul class="o-vertical-spacing o-vertical-spacing--l">
+        <li class="blog-post o-media" style="margin-top: 2rem;">
+          <div class="o-media__figure">
+            <span class="skeleton-box" style="width:100px;height:80px; margin-right: 1rem;"></span>
+          </div>
+          <div class="o-media__body">
+            <div class="o-vertical-spacing">
+              <h3 class="blog-post__headline">
+                <span class="skeleton-box" ></span>
+              </h3>
+              <p>
+                <span class="skeleton-box"></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+              </p>
+              <div class="blog-post__meta">
+                <span class="skeleton-box"></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="blog-post o-media"  style="margin-top: 2rem;">
+          <div class="o-media__figure">
+            <span class="skeleton-box" style="width:100px;height:80px; margin-right: 1rem;"></span>
+          </div>
+          <div class="o-media__body">
+            <div class="o-vertical-spacing">
+              <h3 class="blog-post__headline">
+                <span class="skeleton-box" ></span>
+              </h3>
+              <p>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box"></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box"></span>
+              </p>
+              <div class="blog-post__meta">
+                <span class="skeleton-box"></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="blog-post o-media"  style="margin-top: 2rem;">
+          <div class="o-media__figure">
+            <span class="skeleton-box" style="width:100px;height:80px; margin-right: 1rem;"></span>
+          </div>
+          <div class="o-media__body">
+            <div class="o-vertical-spacing">
+              <h3 class="blog-post__headline">
+                <span class="skeleton-box"></span>
+              </h3>
+              <p>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+              </p>
+              <div class="blog-post__meta">
+                <span class="skeleton-box" ></span>
+              </div>
+            </div>
+          </div>
+        </li>
+        <li class="blog-post o-media"  style="margin-top: 2rem;">
+          <div class="o-media__figure">
+            <span class="skeleton-box" style="width:100px;height:80px; margin-right: 1rem;"></span>
+          </div>
+          <div class="o-media__body">
+            <div class="o-vertical-spacing">
+              <h3 class="blog-post__headline">
+                <span class="skeleton-box"></span>
+              </h3>
+              <p>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+                <span class="skeleton-box" ></span>
+              </p>
+              <div class="blog-post__meta">
+                <span class="skeleton-box" ></span>
+              </div>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </main>
+
+
+
+      <ul  ng-repeat="singlePost in allPosts | orderBy: ['-postedTime', 'id']">
         <!-- {{singlePost.type}} -->
         <li ng-if="singlePost.type=='post'">
           <!-- component directive -->
