--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -460,3 +460,84 @@ background: #e8a5f3e3 !important;
   margin-left: 6rem;
   font-size: 1.5rem;
 }
+
+.skeleton-box {
+  display: inline-block;
+  height: 1rem;
+  width: 25rem;
+  margin-top: 5px;
+  /* padding-top: 2rem; */
+  background-color: #f0f0f0; /* Light gray background color */
+  background-image: linear-gradient(90deg, #979292 25%, #7a7777 50%, #666262 75%); /* Shimmer effect using a linear gradient */
+  background-size: 200% 100%; /* Gradient width is twice the width of the element */
+  animation: shimmer 2s infinite; /* Animation for shimmer effect */
+
+  /* &::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transform: translateX(-100%);
+    background-image: linear-gradient(
+      90deg,
+      rgba(#fff, 0) 0,
+      rgba(#fff, 0.2) 20%,
+      rgba(#fff, 0.5) 60%,
+      rgba(#fff, 0)
+    );
+    animation: shimmer 5s infinite;
+    content: '';
+  } */
+
+ 
+}
+@keyframes shimmer {
+  0% {
+    background-position: -200% 0;
+  }
+  100% {
+    background-position: 200% 0;
+  }
+}
+
+.blog-post {
+  &__headline {
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+
+  &__meta {
+    font-size: 0.85rem;
+    color: #6b6b6b;
+  }
+}
+
+
+
+.o-media {
+  display: flex;
+  
+  &__body {
+    flex-grow: 1;
+    margin-left: 1rem;
+  }
+}
+
+.o-vertical-spacing {
+  > * + * {
+    margin-top: 1rem;
+  }
+  
+  &--l {
+    > * + * {
+      margin-top: 1rem;
+    }
+  }
+}
+
+
+
+
+
+
