added lottie animation and css animation

--- a/frontendSocialFeed/css/index.css
+++ b/frontendSocialFeed/css/index.css
@@ -4,7 +4,7 @@
     .content {
       color: #000; 
     }
-   
+    
     .content1{
       position:fixed;
       width: 100%;
@@ -107,12 +107,29 @@
     }
    
     .textBox {
+      transition: all linear 0.5s;
       display: inline-block;
-
+      /* position: relative; */
       width:100%;
       margin-top: 1rem !important;
       border: none;
       box-shadow: none;
+      animation-name: zoomFadeIn;
+      animation-duration: 2s; /* Duration of the animation */
+      animation-delay: 0s; /* Delay before the animation starts */
+      animation-timing-function: ease; /* Timing function (e.g., ease, linear, ease-in-out) */
+      animation-fill-mode: forwards;
+    }
+
+    @keyframes zoomFadeIn {
+      from {
+        transform: scale(0.5);
+        opacity: 0;
+      }
+      to {
+        transform: scale(1);
+        opacity: 1;
+      }
     }
     .form-check-input[disabled] {
       color:#000 !important;
@@ -464,7 +481,7 @@ background: #e8a5f3e3 !important;
 .skeleton-box {
   display: inline-block;
   height: 1rem;
-  width: 25rem;
+  width: 30rem;
   margin-top: 5px;
   /* padding-top: 2rem; */
   background-color: #f0f0f0; /* Light gray background color */
@@ -535,6 +552,7 @@ background: #e8a5f3e3 !important;
     }
   }
 }
+
 
 
 
