--- a/frontendSocialFeed/views/feed.html
+++ b/frontendSocialFeed/views/feed.html
@@ -699,7 +699,7 @@
           background: linear-gradient(transparent, rgba(134, 225, 241, 0.3));
         "
       >
-      <lottie-player src="https://lottie.host/ca69f75d-018e-4f70-98ed-96e6f2cc1a24/9C1yrXIQ1O.json" speed="1" style="width: 300px; height: 300px" loop="true"         
+      <lottie-player src="https://lottie.host/ca69f75d-018e-4f70-98ed-96e6f2cc1a24/9C1yrXIQ1O.json" speed="1" style="width: 100%; height: 100%" loop="true"         
       autoplay="true"
       mode="normal" ></lottie-player>
         <div class="card-body">
